📱 Attempt to fix screen on ios devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,3 +181,9 @@ body {
     width: 100%;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
